Added path to get message by trx hash and message lt.
Also added message body to messages feed.
